fix #21059 - see #19724 - export `java.base/sun.security.action` to unnamed module
git-svn-id: https://josm.openstreetmap.de/svn/trunk@17971 0c6e7542-c601-0410-84e7-c038aed88b3b